--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-flask>=2.0.0
-python-jose[cryptography]>=3.3.0
-sqlalchemy>=1.4.0 
-httpx>=0.28.1
-pydantic>=2.11.4
+python-jose[cryptography]
+httpx
+pydantic
+cachetools
